--- a/facts.html
+++ b/facts.html
@@ -1,1 +1,193 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interesting Facts about India</title>
+    <style>
+        /* Global styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: lightcoral;
+            background-size: cover;
+            color: #333;
+        }
+
+        header {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 20px;
+            text-align: center;
+            position: relative;
+        }
+
+        header img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            position: absolute;
+            top: 10px;
+            right: 20px;
+        }
+
+        nav a {
+            color: thistle;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        section {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 10px;
+        }
+
+        h2 {
+            text-align: center;
+            color: #333;
+        }
+
+        .facts-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .fact {
+            background-color: rgba(255, 255, 255, 0.95);
+            border-radius: 10px;
+            padding: 20px;
+            width: 300px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            transition: transform 0.3s;
+        }
+
+        .fact img {
+            width: 100%;
+            height: 180px;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+
+        .fact:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .fact h3 {
+            margin-top: 15px;
+            color: #3e5b9c;
+        }
+
+        .fact p {
+            font-size: 14px;
+            margin: 10px 0;
+            color: #555;
+        }
+
+        .fact button {
+            background-color: #3e5b9c;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .fact button:hover {
+            background-color: #2c3e8c;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Explore Fascinating Facts About Historical Places</h1>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="places.html">Historical Places</a>
+            <a href="foods.html">Foods and Culture</a>
+            <a href="contact.html">Contact Us</a>
+        </nav>
+        <img src="images/my pic.jpg" alt="Supriya Korlagunta">
+    </header>
+
+    <section>
+        <h2>Discover Interesting Facts about Places</h2>
+        <div class="facts-container">
+            <!-- Fact 1 -->
+            <div class="fact">
+                <img src="Images/tajfact.jpg" alt="Taj Mahal">
+                <h3>Taj Mahal, Agra</h3>
+                <p>The Taj Mahal is not just a symbol of eternal love but also a UNESCO World Heritage Site, attracting millions of visitors every year.</p>
+                <a href="https://www.tajmahal.gov.in" target="_blank">
+                    <button>More Info</button>
+                </a>
+            </div>
+
+            <!-- Fact 2 -->
+            <div class="fact">
+                <img src="Images/ajantafact.jpg" alt="Ajanta Caves">
+                <h3>Ajanta Caves, Maharashtra</h3>
+                <p>The Ajanta Caves are renowned for their beautiful frescoes and carvings, representing Buddhist art and architecture dating back to the 2nd century BCE.</p>
+                <a href="https://whc.unesco.org/en/list/242/" target="_blank">
+                    <button>More Info</button>
+                </a>
+            </div>
+
+            <!-- Fact 3 -->
+            <div class="fact">
+                <img src="Images/goldenfact.jpg" alt="Golden Temple">
+                <h3>Golden Temple, Amritsar</h3>
+                <p>The Golden Temple, also known as Harmandir Sahib, is the holiest shrine in Sikhism and is famous for its stunning golden structure and serene surroundings.</p>
+                <a href="https://www.goldentempleamritsar.org" target="_blank">
+                    <button>Learn More</button>
+                </a>
+            </div>
+
+            <!-- Fact 4 -->
+            <div class="fact">
+                <img src="Images/amaravthi.jpg" alt="Amaravathi">
+                <h3>Amaravathi, Andhra Pradesh</h3>
+                <p>Amaravathi is known for its ancient Buddhist heritage, housing one of the largest Buddhist stupas and being an important pilgrimage site for Buddhists.</p>
+                <a href="https://amaravati.org/visiting/" target="_blank">
+                    <button>Discover</button>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Supriya Korlagunta's Interesting Facts Website</p>
+    </footer>
+
+    <script>
+        // Optional: Alert message on button click
+        const buttons = document.querySelectorAll('.fact button');
+        buttons.forEach(button => {
+            button.addEventListener('click', function() {
+                console.log('Fact button clicked:', this.textContent);
+            });
+        });
+    </script>
+</body>
+</html>
 
