--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,222 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Contact Us </title>
+    <style>
+        /* General Styling */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-image: url('images/cb.jpg');
+            background-size: cover;
+            background-position: center;
+            color: #fff;
+        }
 
+        header {
+            background-color: rgba(0, 0, 0, 0.8);
+            color: #f0e68c;
+            padding: 20px;
+            text-align: center;
+        }
+
+        nav {
+            margin-top: 10px;
+        }
+
+        nav a {
+            color: #f0e68c;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        section {
+            max-width: 700px;
+            margin: 40px auto;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            color: #333;
+        }
+
+        h2, h3 {
+            text-align: center;
+            color: #3498db;
+        }
+
+        label {
+            font-weight: bold;
+            color: #333;
+        }
+
+        .section {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .icon-small {
+            width: 50px;
+            height: 50px;
+            margin-right: 15px;
+            vertical-align: middle;
+        }
+
+        .contact-info p, .social-media p {
+            margin: 0;
+        }
+
+        footer {
+            text-align: center;
+            padding: 15px;
+            background-color: rgba(0, 0, 0, 0.8);
+            color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 600px) {
+            section {
+                padding: 15px;
+            }
+            .icon-small {
+                width: 40px;
+                height: 40px;
+            }
+        }
+
+        /* Form Styling */
+        form {
+            background-color: rgba(240, 240, 240, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        input[type="text"], input[type="email"], textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        input[type="text"]:focus, input[type="email"]:focus, textarea:focus {
+            outline: none;
+            border: 2px solid #3498db; 
+            background-color: #f0f8ff;
+        }
+
+        input[type="submit"] {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #2980b9;
+        }
+
+        /* Success Message Styling */
+        .success-message {
+            background-color: #2ecc71;
+            color: white;
+            padding: 15px;
+            text-align: center;
+            border-radius: 5px;
+            margin: 20px 0;
+            display: none; 
+        }
+
+        /* Error Styling */
+        .error {
+            border: 2px solid red;
+        }
+
+        /* Styling for your personal image */
+        .profile-pic {
+            display: block;
+            margin: 20px auto;
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover; 
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Contact Us</h1>
+        <nav>
+            <a href="home.html">Home</a> 
+            <a href="foods.html">Food and Cuture</a> 
+            <a href="places.html">Historical Places</a> |
+            <a href="facts.html">Interesting Facts</a> |
+            <a href="contact.html">Contact Us</a>
+        </nav>
+    </header>
+
+    <section>
+        <h2>Get in Touch</h2>
+
+        <!-- Add your picture -->
+        <img src="images/my pic.jpg" alt="Supriya Picture" class="profile-pic">
+
+        <!-- Contact Information -->
+        <div class="section contact-info">
+            <img src="images/phone.jpg" alt="Phone" class="icon-small">
+            <p><b>Contact Number:</b> <a href="tel:+16035124493">+1 (603) 512-4493</a></p>
+        </div>
+
+        <div class="section contact-info">
+            <img src="images/email.jpg" alt="Email" class="icon-small">
+            <p><b>Email:</b> <a href="mailto:skorlagunta@rivier.edu">skorlagunta@rivier.edu</a></p>
+        </div>
+
+        <h3>Social Media</h3>
+
+        <!-- Social Media Links -->
+        <div class="section social-media">
+            <img src="images/linkedin.jpg" alt="LinkedIn" class="icon-small">
+            <p><b>LinkedIn:</b> <a href="https://linkedin.com/in/supriya-korlagunta" id="linkedin-link">linkedin.com/in/supriya</a></p>
+        </div>
+
+        <!-- Contact Form -->
+        <h3>Send me a Message</h3>
+        <form id="contact-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Your Email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" placeholder="Your Message" rows="4" maxlength="500" required></textarea>
+
+            <input type="submit" value="Send Message">
+        </form>
+
+        <!-- Success Message -->
+        <div class="success-message" id="success-message">
+            Thank you for contacting me! We will get back to you shortly.
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Historical Places | Designed by Supriya Korlagunta</p>
+    </footer>
+
+    
