--- a/facts.html
+++ b/facts.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interesting Facts about India</title>
     <style>
         /* Global styles */
@@ -43,10 +41,11 @@
             text-decoration: underline;
         }
 
+        /* Styling for the facts section */
         section {
             max-width: 1200px;
             margin: 20px auto;
-            padding: 20px;
+            padding: 0 20px;
             background-color: rgba(255, 255, 255, 0.8);
             border-radius: 10px;
         }
@@ -59,12 +58,12 @@
         .facts-container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: space-around;
             gap: 20px;
         }
 
         .fact {
-            background-color: rgba(255, 255, 255, 0.95);
+            background-color: rgba(255, 255, 255, 0.9);
             border-radius: 10px;
             padding: 20px;
             width: 300px;
@@ -75,8 +74,7 @@
 
         .fact img {
             width: 100%;
-            height: 180px;
-            object-fit: cover;
+            height: 60%;
             border-radius: 10px;
         }
 
@@ -115,6 +113,9 @@
             padding: 10px;
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
@@ -122,9 +123,9 @@
     <header>
         <h1>Explore Fascinating Facts About Historical Places</h1>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="home.html">Home</a> 
             <a href="places.html">Historical Places</a>
-            <a href="foods.html">Foods and Culture</a>
+            <a href="foods.html">Foods and Culture</a></li>			
             <a href="contact.html">Contact Us</a>
         </nav>
         <img src="images/my pic.jpg" alt="Supriya Korlagunta">
@@ -133,9 +134,10 @@
     <section>
         <h2>Discover Interesting Facts about Places</h2>
         <div class="facts-container">
-            <!-- Fact 1 -->
+            
+            <!-- Fact 1: Taj Mahal -->
             <div class="fact">
-                <img src="Images/tajfact.jpg" alt="Taj Mahal">
+                <img src="Images/tajfact.jpg" alt="Taj Mahal" width="200" height="300">
                 <h3>Taj Mahal, Agra</h3>
                 <p>The Taj Mahal is not just a symbol of eternal love but also a UNESCO World Heritage Site, attracting millions of visitors every year.</p>
                 <a href="https://www.tajmahal.gov.in" target="_blank">
@@ -143,9 +145,9 @@
                 </a>
             </div>
 
-            <!-- Fact 2 -->
+            <!-- Fact 2: Ajanta Caves -->
             <div class="fact">
-                <img src="Images/ajantafact.jpg" alt="Ajanta Caves">
+                <img src="Images/ajantafact.jpg" alt="Ajanta Caves" width="200" height="300">
                 <h3>Ajanta Caves, Maharashtra</h3>
                 <p>The Ajanta Caves are renowned for their beautiful frescoes and carvings, representing Buddhist art and architecture dating back to the 2nd century BCE.</p>
                 <a href="https://whc.unesco.org/en/list/242/" target="_blank">
@@ -153,9 +155,9 @@
                 </a>
             </div>
 
-            <!-- Fact 3 -->
+            <!-- Fact 3: Golden Temple -->
             <div class="fact">
-                <img src="Images/goldenfact.jpg" alt="Golden Temple">
+                <img src="Images/goldenfact.jpg" alt="Golden Temple" width="200" height="300">
                 <h3>Golden Temple, Amritsar</h3>
                 <p>The Golden Temple, also known as Harmandir Sahib, is the holiest shrine in Sikhism and is famous for its stunning golden structure and serene surroundings.</p>
                 <a href="https://www.goldentempleamritsar.org" target="_blank">
@@ -163,15 +165,16 @@
                 </a>
             </div>
 
-            <!-- Fact 4 -->
+            <!-- Fact 4: Amaravathi -->
             <div class="fact">
-                <img src="Images/amaravthi.jpg" alt="Amaravathi">
+                <img src="Images/amaravthi.jpg" alt="Amaravathi" width="200" height="300">
                 <h3>Amaravathi, Andhra Pradesh</h3>
                 <p>Amaravathi is known for its ancient Buddhist heritage, housing one of the largest Buddhist stupas and being an important pilgrimage site for Buddhists.</p>
                 <a href="https://amaravati.org/visiting/" target="_blank">
                     <button>Discover</button>
                 </a>
             </div>
+
         </div>
     </section>
 
@@ -180,14 +183,13 @@
     </footer>
 
     <script>
-        // Optional: Alert message on button click
+        // JavaScript to show an alert on button click for demonstration
         const buttons = document.querySelectorAll('.fact button');
         buttons.forEach(button => {
             button.addEventListener('click', function() {
-                console.log('Fact button clicked:', this.textContent);
+                alert('Button clicked!');
             });
         });
     </script>
 </body>
 </html>
-
