--- a/places.html
+++ b/places.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historical Places in India</title>
     <style>
+        /* General Styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-image: url('images/india1.jpg'); 
-            background-size: cover;
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            color: maroon;
+            background-size: cover; 
+            background-attachment: fixed; 
+            background-position: center; 
+            background-repeat: no-repeat; 
+            color: maroon; 
         }
 
+        /* Header Section */
         header {
             color: maroon;
             text-align: center;
@@ -27,12 +27,13 @@
         }
 
         header img {
-            width: 150px;
+            width: 150px; 
             height: auto;
-            border-radius: 50%;
-            margin-right: 20px;
+            border-radius: 50%; 
+            margin-right: 20px;   
         }
 
+        /* Navigation Bar */
         nav ul {
             list-style: none;
             background-color: maroon;
@@ -55,6 +56,7 @@
             text-decoration: underline;
         }
 
+        /* Places Section */
         #places-section {
             padding: 50px;
             text-align: center;
@@ -82,23 +84,26 @@
 
         .place h3 {
             margin: 10px 0;
-            color: #333;
+            color:#333;
         }
 
         .place p {
             font-size: 0.9em;
-            color: purple;
+            color:purple;
         }
 
         .place:hover {
             transform: scale(1.05);
         }
 
+        /* Lightbox Styles */
         .lightbox {
             display: none;
             position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background-color: rgba(0, 0, 0, 0.8);
             justify-content: center;
             align-items: center;
@@ -110,24 +115,35 @@
             max-height: 90%;
         }
 
+        /* Quiz Section */
         #quiz-section {
             padding: 50px;
             text-align: center;
             background-color: pink;
             border-radius: 10px;
-            margin: 20px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            margin: 20px 0;
         }
 
+        /* Footer */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        /* Contact Form */
         #contact-section {
             padding: 50px;
             text-align: center;
             background-color: thistle;
             border-radius: 10px;
-            margin: 20px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            margin: 20px 0;
         }
 
+        /* Form Elements */
         input, textarea {
             width: 300px;
             padding: 10px;
@@ -144,30 +160,26 @@
             border-radius: 10px;
             cursor: pointer;
         }
-
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
     </style>
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <img src="images/my pic.jpg" alt="Supriya Korlagunta">
         <h1>Explore Historical Places in India</h1>
     </header>
 
+    <!-- Navigation Bar -->
     <nav>
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="facts.html">Interesting Facts</a></li>
-            <li><a href="foods.html">Foods and Culture</a></li>
+			<li><a href="foods.html">Foods and Culture</a></li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
+    <!-- Historical Places Section -->
     <section id="places-section">
         <h2>Featured Historical Places</h2>
         <div class="places-grid">
@@ -194,28 +206,31 @@
         </div>
     </section>
 
+    <!-- Lightbox for images -->
     <div id="lightbox" class="lightbox" onclick="closeLightbox()">
-        <img id="lightbox-img" src="" alt="Large Image">
+        <img id="lightbox-img" src="" alt="Lightbox Image">
     </div>
 
+    <!-- Quiz Section -->
     <section id="quiz-section">
         <h2>Test Your Knowledge</h2>
         <p>What is the name of the monument built by Emperor Shah Jahan?</p>
-        <button onclick="alert('Correct! It is the Taj Mahal.')">Taj Mahal</button>
-        <button onclick="alert('Incorrect! Try again.')">Qutub Minar</button>
+        <button onclick="alert('Correct! It is the Taj Mahal.')" class="quiz-button">Taj Mahal</button>
+        <button onclick="alert('Incorrect! Try again.')" class="quiz-button">Qutub Minar</button>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact-section">
         <h2>Contact Us</h2>
         <form id="contact-form">
             <input type="text" id="name" placeholder="Your Name" required>
             <input type="email" id="email" placeholder="Your Email" required>
             <textarea id="message" rows="4" placeholder="Your Message" required></textarea>
-            <br>
             <button type="submit">Submit</button>
         </form>
     </section>
 
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 Supriya Korlagunta | Historical Places in India</p>
         <p>October 2024</p>
@@ -224,19 +239,18 @@
     <script>
         function openLightbox(imgSrc) {
             document.getElementById('lightbox-img').src = imgSrc;
-            document.getElementById('lightbox').style.display = 'flex';
+            document.getElementById('lightbox').style.display = 'flex'; // Show lightbox
         }
 
         function closeLightbox() {
-            document.getElementById('lightbox').style.display = 'none';
+            document.getElementById('lightbox').style.display = 'none'; // Hide lightbox
         }
 
         document.getElementById('contact-form').addEventListener('submit', function(e) {
             e.preventDefault();
             alert("Thank you for your message!");
-            this.reset();
+            this.reset(); // Reset the form after submission
         });
     </script>
 </body>
 </html>
-
